infra/k8s/overlays/dev/service-patch.yaml
# Patch to make service publicly accessible in dev
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
